# AutoPlay

./: .gitignore  AGENT.md  README.md  pyproject.toml  run_autoplay.cmd  run_autoplay.py
config/: autoplay.example.json
docs/: ai-local-automation-plan.md  architecture.md  environment-setup.md  maintenance.md  next-phase-plan.md  next-provider-chat-plan.md  next-stage.md  personal-scripts.md  sdd.md  stage-report.md  user-testing.md
docs/specs/: 0001-bluestacks-adb-poc.md  0002-script-validation.md  0003-template-checkpoint.md  0004-user-test-readiness.md  0005-guided-recorder.md  0006-core-api.md  0007-agent-tool-safety.md  0008-agent-run-cli.md  0009-click-map-helper.md  0010-record-ui.md  0011-live-click-recorder.md  0012-continuous-recorder-ui.md  0013-recorder-ui-refresh.md  0014-mobile-gestures.md  0015-checkpoint-authoring-foundation.md  0016-record-ui-template-cropping.md  0017-record-ui-direct-gesture-authoring.md  0018-gesture-capture-loop.md  (+11 more)
examples/: personal-daily-template.yml  report-only.yml  smoke.yml
tests/: png_helpers.py  test_adb.py  test_agent_runner.py  test_agent_tools.py  test_ai_adapter.py  test_ai_bridge.py  test_ai_chat.py  test_ai_client.py  test_ai_examples.py  test_ai_mcp.py  test_ai_mcp_client.py  test_ai_schemas.py  test_ai_script_drafts.py  test_ai_server.py  test_api.py  test_calibration.py  test_cli.py  test_click_map.py  test_emulator_profiles.py  test_image_match.py  test_live_click_recorder.py  test_local_config.py  test_paths.py  test_recorder.py  test_recorder_server.py  test_runner.py  test_script.py  test_validation.py
(+32 files in other folders)
