[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "autoplay"
version = "0.1.0"
description = "ADB runner for safe Android emulator daily-task automation."
readme = "AGENT.md"
requires-python = ">=3.10"
dependencies = [
    "PyYAML>=5.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[project.scripts]
autoplay = "autoplay.cli:main"
autoplay-dev = "autoplay.dev_launcher:main"

[tool.setuptools.packages.find]
where = ["src"]
